Eyes, mouth, rocket and spinning motion

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
             <div class="crater crater-4"></div>
             <div class="crater crater-5"></div>
             <div class="shadow"></div>
+            <div class="eye eye-l"></div>
+            <div class="eye eye-r"></div>
+            <div class="mouth"></div>
+        </div>
+        <div class="orbit">
+            <div class="rocket">
+                <div class="window"></div>
+
+            </div>
         </div>
     </div>
 </body>
